--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -15,7 +15,8 @@
     <application android:name="mobi.doorinthewall.locationlogger.LoggerApplication" android:label="@string/app_name">
         <activity android:name="mobi.doorinthewall.locationlogger.LoggerActivity"
                   android:launchMode="singleTop"
-                  android:label="@string/app_name">
+                  android:label="@string/app_name"
+                  android:theme="@android:style/Theme.NoDisplay">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
