--- a/.classpath
+++ b/.classpath
@@ -3,7 +3,7 @@
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry exported="true" kind="lib" path="libs/littlefluffylocationlibrary.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/gson/gson-2.2.4.jar"/>
+	<classpathentry kind="lib" path="libs/gson/gson-2.2.4.jar"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
